--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.polybrush": "1.1.8",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.services.analytics": "5.1.1",
     "com.unity.textmeshpro": "3.0.6",
